force-app/wow/wmf_order/objects/WOO_WMF_Order_Line_Item__c/fields/WOO_Assigment__c.field-meta.xml
<CustomField>
    <fullName>WOO_Assigment__c</fullName>
    <label>Assigment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>004</fullName>
                <label>004 - SCHADEN (PERSONEN-UND/ODER SAC</label>
            </value>
            <value>
                <fullName>010</fullName>
                <label>010 - IG BERECHTIGT</label>
            </value>
            <value>
                <fullName>011</fullName>
                <label>011 - IG NICHT BERECHTIGT</label>
            </value>
            <value>
                <fullName>012</fullName>
                <label>012 - IG KULANZ</label>
            </value>
            <value>
                <fullName>020</fullName>
                <label>020 - AG KULANZ</label>
            </value>
            <value>
                <fullName>021</fullName>
                <label>021 - AG BESONDERHEITEN</label>
            </value>
            <value>
                <fullName>022</fullName>
                <label>022 - AG RÜCKSENDUNG</label>
            </value>
            <value>
                <fullName>999</fullName>
                <label>999 - NICHT RELEVANT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>