force-app/wow/wmf_order/objects/WOO_WMF_Order_Line_Item__c/fields/WOO_CMMF_in_case_of_replacement__c.field-meta.xml
<CustomField>
    <fullName>WOO_CMMF_in_case_of_replacement__c</fullName>
    <label>CMMF in case of replacement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>