force-app/wow/wmf_order/objects/WOO_WMF_Order_Line_Item__c/fields/WOO_Comment__c.field-meta.xml
<CustomField>
    <fullName>WOO_Comment__c</fullName>
    <label>Comment</label>
    <length>70</length>
    <type>Text</type>
</CustomField>