force-app/wow/wmf_order/objects/WOO_WMF_Order_Line_Item__c/fields/WOO_Country__c.field-meta.xml
<CustomField>
    <fullName>WOO_Country__c</fullName>
    <defaultValue>IF($User.UserCountryCode__c = &apos;WM&apos;, &apos;DE&apos;, $User.UserCountryCode__c)</defaultValue>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>