force-app/wow/wmf_order/objects/WOO_WMF_Order_Line_Item__c/fields/WOO_Defect_Location__c.field-meta.xml
<CustomField>
    <fullName>WOO_Defect_Location__c</fullName>
    <label>Defect Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>001 - ABDECKUNG</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>002 - ARM</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>003 - AUFHÄNGUNG</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>005 - AUSGUß</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>008 - BESCHICHTUNG</label>
            </value>
            <value>
                <fullName>009</fullName>
                <label>009 - BESPANNUNG</label>
            </value>
            <value>
                <fullName>012</fullName>
                <label>012 - ARTIKEL</label>
            </value>
            <value>
                <fullName>013</fullName>
                <label>013 - BODEN AUSSEN</label>
            </value>
            <value>
                <fullName>014</fullName>
                <label>014 - BODEN INNEN</label>
            </value>
            <value>
                <fullName>015</fullName>
                <label>015 - BOLZEN</label>
            </value>
            <value>
                <fullName>017</fullName>
                <label>017 - BÜGEL</label>
            </value>
            <value>
                <fullName>019</fullName>
                <label>019 - ETIKETT</label>
            </value>
            <value>
                <fullName>020</fullName>
                <label>020 - DECKEL/HAUBE</label>
            </value>
            <value>
                <fullName>021</fullName>
                <label>021 - DEKOR</label>
            </value>
            <value>
                <fullName>022</fullName>
                <label>022 - DICHTUNG</label>
            </value>
            <value>
                <fullName>026</fullName>
                <label>026 - ERSATZ</label>
            </value>
            <value>
                <fullName>029</fullName>
                <label>029 - GESTELL</label>
            </value>
            <value>
                <fullName>030</fullName>
                <label>030 - FEDER</label>
            </value>
            <value>
                <fullName>031</fullName>
                <label>031 - FUSS</label>
            </value>
            <value>
                <fullName>032</fullName>
                <label>032 - HALTERUNG/ANSCHLAG</label>
            </value>
            <value>
                <fullName>033</fullName>
                <label>033 - GEWINDE</label>
            </value>
            <value>
                <fullName>035</fullName>
                <label>035 - GRIFF/HEFT</label>
            </value>
            <value>
                <fullName>036</fullName>
                <label>036 - TOPFGRIFF</label>
            </value>
            <value>
                <fullName>037</fullName>
                <label>037 - DECKELGRIFF</label>
            </value>
            <value>
                <fullName>038</fullName>
                <label>038 - INDUKTIONSBODEN</label>
            </value>
            <value>
                <fullName>039</fullName>
                <label>039 - ALLHERDBODEN</label>
            </value>
            <value>
                <fullName>040</fullName>
                <label>040 - HOHE KANTE</label>
            </value>
            <value>
                <fullName>041</fullName>
                <label>041 - DECKELGRIFF SKT</label>
            </value>
            <value>
                <fullName>042</fullName>
                <label>042 - DECKEL SKT</label>
            </value>
            <value>
                <fullName>043</fullName>
                <label>043 - KANTE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>