force-app/wow/wmf_order/objects/WOO_WMF_Order_Line_Item__c/fields/WOO_Defect_type__c.field-meta.xml
<CustomField>
    <fullName>WOO_Defect_type__c</fullName>
    <label>Defect type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>001 - ABBLASEN SCHLAGARTIG</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>002 - ANFRESSUNGEN</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>003 - ANGELAUFEN</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>004 - AUSGEBLEICHT</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>005 - AUSGEBROCHEN</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>006 - ANKLEBEN</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>007 - BOMBIERUNG</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>008 - ABGEBLÄTTERT/AUFGESTIEGEN</label>
            </value>
            <value>
                <fullName>009</fullName>
                <label>009 - BLASEN</label>
            </value>
            <value>
                <fullName>010</fullName>
                <label>010 - DELLEN/VERBEULT</label>
            </value>
            <value>
                <fullName>011</fullName>
                <label>011 - SCHLAGMARKEN</label>
            </value>
            <value>
                <fullName>012</fullName>
                <label>012 - DRUCKSTELLEN</label>
            </value>
            <value>
                <fullName>013</fullName>
                <label>013 - DURCHGEDRÜCKT</label>
            </value>
            <value>
                <fullName>014</fullName>
                <label>014 - NIETABPLATZER</label>
            </value>
            <value>
                <fullName>015</fullName>
                <label>015 - STÖRGERÄUSCHE</label>
            </value>
            <value>
                <fullName>016</fullName>
                <label>016 - EINFALLSTELLEN</label>
            </value>
            <value>
                <fullName>017</fullName>
                <label>017 - ZERSPRUNGEN</label>
            </value>
            <value>
                <fullName>018</fullName>
                <label>018 - FUNKTION SKT</label>
            </value>
            <value>
                <fullName>019</fullName>
                <label>019 - FALSCH/VERTAUSCHT</label>
            </value>
            <value>
                <fullName>020</fullName>
                <label>020 - MONTAGEFEHLER</label>
            </value>
            <value>
                <fullName>021</fullName>
                <label>021 - FARBABWEICHUNG</label>
            </value>
            <value>
                <fullName>022</fullName>
                <label>022 - INDUKTIONSPROBLEME</label>
            </value>
            <value>
                <fullName>023</fullName>
                <label>023 - DRUCKWERTE</label>
            </value>
            <value>
                <fullName>024</fullName>
                <label>024 - FEHLT/UNVOLLSTÄNDIG</label>
            </value>
            <value>
                <fullName>025</fullName>
                <label>025 - FLECKIG</label>
            </value>
            <value>
                <fullName>026</fullName>
                <label>026 - STUMPF</label>
            </value>
            <value>
                <fullName>027</fullName>
                <label>027 - FORMABWEICHUNG</label>
            </value>
            <value>
                <fullName>028</fullName>
                <label>028 - NICHT MEHR VERWENDEN</label>
            </value>
            <value>
                <fullName>029</fullName>
                <label>029 - GRATIG/SCHARFKANTIG/RAUH</label>
            </value>
            <value>
                <fullName>030</fullName>
                <label>030 - ABGEBROCHEN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>