force-app/wow/wmf_order/objects/WOO_WMF_Order_Line_Item__c/fields/WOO_EAN__c.field-meta.xml
<CustomField>
    <fullName>WOO_EAN__c</fullName>
    <formula>WOO_Product__r.Code_EAN_Format__c</formula>
    <label>EAN</label>
    <type>Text</type>
</CustomField>