force-app/wow/wmf_order/objects/WOO_WMF_Order_Line_Item__c/fields/WOO_Name__c.field-meta.xml
<CustomField>
    <fullName>WOO_Name__c</fullName>
    <description>For the Free Orders it is the name of the sparePart Line that matches an OrderLine record</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>