force-app/wow/wmf_order/objects/WOO_WMF_Order_Line_Item__c/fields/WOO_Product__c.field-meta.xml
<CustomField>
    <fullName>WOO_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Product2.Country__c</field>
            <operation>equals</operation>
            <valueField>$Source.WOO_Country__c</valueField>
        </filterItems>
        <filterItems>
            <field>$User.Bypass_Lookup_Filter__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipName>WMF_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>