force-app/wow/wmf_order/objects/WOO_WMF_Order_Line_Item__c/fields/WOO_Product_CMMF__c.field-meta.xml
<CustomField>
    <fullName>WOO_Product_CMMF__c</fullName>
    <formula>WOO_Product__r.CMMF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product CMMF</label>
    <type>Text</type>
</CustomField>