force-app/wow/wmf_order/objects/WOO_WMF_Order_Line_Item__c/fields/WOO_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>WOO_Product_Name__c</fullName>
    <formula>WOO_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>