force-app/wow/wmf_order/objects/WOO_WMF_Order_Line_Item__c/fields/WOO_Product_reference__c.field-meta.xml
<CustomField>
    <fullName>WOO_Product_reference__c</fullName>
    <formula>WOO_Product__r.Reference_commerciale__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product reference (Commercial Reference)</label>
    <type>Text</type>
</CustomField>