force-app/wow/wmf_order/objects/WOO_WMF_Order_Line_Item__c/fields/WOO_Reference__c.field-meta.xml
<CustomField>
    <fullName>WOO_Reference__c</fullName>
    <description>For the Free Orders it is the reference code of the sparePart Line that matches an OrderLine record</description>
    <label>Spare part Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>