force-app/wow/wmf_order/objects/WOO_WMF_Order_Line_Item__c/fields/WOO_Repair_instructions__c.field-meta.xml
<CustomField>
    <fullName>WOO_Repair_instructions__c</fullName>
    <label>Repair instructions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>01 - Wellenschliff  T/H</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>02 - Schärfen Küchenmesser  T/H</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>03 - Microcut  T/H</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>05 - Klinge ersetzen  T/H</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>06 - Montagerep. SKT  T/H</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>07 - Sonstige Rep / Liebhaberstück</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>14 - Schärfen Fremdware</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>27 - Aufarb. Sonstiges T/H</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>52 - Umtausch  T/H</label>
            </value>
            <value>
                <fullName>53</fullName>
                <label>53 - Zurück  T/H</label>
            </value>
            <value>
                <fullName>54</fullName>
                <label>54 - Lasergravur  T/H</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>60 - Montagerep. Griff  T/H</label>
            </value>
            <value>
                <fullName>61</fullName>
                <label>61 - Montagerep. gemischt</label>
            </value>
            <value>
                <fullName>62</fullName>
                <label>62 - Glattschliff  T/H</label>
            </value>
            <value>
                <fullName>70</fullName>
                <label>70 - Aufarb. Topf T/H</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>