force-app/wow/wmf_order/objects/WOO_WMF_Order_Line_Item__c/fields/WOO_Requested_quantity__c.field-meta.xml
<CustomField>
    <fullName>WOO_Requested_quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Requested quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>