force-app/wow/wmf_order/objects/WOO_WMF_Order_Line_Item__c/fields/WOO_Returned_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>WOO_Returned_delivery_date__c</fullName>
    <label>Possible delivery date</label>
    <type>Date</type>
</CustomField>