force-app/wow/wmf_order/objects/WOO_WMF_Order_Line_Item__c/fields/WOO_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>WOO_Total_Price__c</fullName>
    <formula>WOO_Requested_quantity__c * WOO_Unitary_price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>