force-app/wow/wmf_order/objects/WOO_WMF_Order_Line_Item__c/fields/WOO_Unitary_price__c.field-meta.xml
<CustomField>
    <fullName>WOO_Unitary_price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Unitary price</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>