force-app/wow/wmf_order/objects/WOO_WMF_Order_Line_Item__c/fields/WOO_WMF_Order__c.field-meta.xml
<CustomField>
    <fullName>WOO_WMF_Order__c</fullName>
    <label>CCC Order</label>
    <referenceTo>WOO_WMF_Orders__c</referenceTo>
    <relationshipName>WMF_Order_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>