force-app/wow/wmf_order/objects/WOO_WMF_Order_Line_Item__c/recordTypes/Finished_products_Spare_part.recordType-meta.xml
<RecordType>
    <fullName>Finished_products_Spare_part</fullName>
    <active>true</active>
    <description>Record Type for Finished Product order or Spare Parts order</description>
    <label>Finished products/Spare part</label>
</RecordType>