force-app/wow/wmf_order/objects/WOO_WMF_Order_Line_Item__c/recordTypes/Repair.recordType-meta.xml
<RecordType>
    <fullName>Repair</fullName>
    <active>true</active>
    <description>Record Type for Repair order</description>
    <label>Repair</label>
</RecordType>