force-app/wow/wmf_order/objects/WOO_WMF_Order_Line_Item__c/validationRules/Invalid_Product_type.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Product_type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT($User.Bypass_Validation_Rules__c),
				WOO_WMF_Order__r.RecordType.Name = &apos;SAP_Orders&apos;,
				OR( 
        AND(
            ISPICKVAL(WOO_WMF_Order__r.WOO_Order_Type__c  , &quot;Finished products&quot;) ,
            WOO_Product__r.RecordType.DeveloperName &lt;&gt; &quot;Produit_fini&quot;,
            NOT(ISBLANK(WOO_Product__c ))
        ),
        AND(
            ISPICKVAL(WOO_WMF_Order__r.WOO_Order_Type__c  , &quot;Spare part&quot;) ,
            WOO_Product__r.RecordType.DeveloperName &lt;&gt; &quot;Spare_parts&quot;,
            NOT(ISBLANK(WOO_Product__c ))
        ),
        AND(
            ISPICKVAL(WOO_WMF_Order__r.WOO_Order_Type__c  , &quot;Repair&quot;) ,
            WOO_Product__r.RecordType.DeveloperName &lt;&gt; &quot;Produit_fini&quot;,
            NOT(ISBLANK(WOO_Product__c ))
        )
    )
)</errorConditionFormula>
    <errorMessage>The Product doesn&apos;t match with the Order Type.</errorMessage>
</ValidationRule>