force-app/wow/wmf_order/objects/WOO_WMF_Order_Line_Item__c/validationRules/OrderSentToSAP.validationRule-meta.xml
<ValidationRule>
    <fullName>OrderSentToSAP</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				NOT($User.Bypass_Validation_Rules__c),
				WOO_WMF_Order__r.RecordType.Name = &apos;SAP_Orders&apos;,
    OR(
				    ISPICKVAL(WOO_WMF_Order__r.WOO_SAP_status__c ,&quot;Ready to be sent&quot;),
        ISPICKVAL(WOO_WMF_Order__r.WOO_SAP_status__c , &quot;Sent&quot;)
    )
)</errorConditionFormula>
    <errorMessage>You can&apos;t change, add or delete Order Line Items if the Order is already sent to SAP.</errorMessage>
</ValidationRule>